--- a/WebAppCode/Client/index.html
+++ b/WebAppCode/Client/index.html
@@ -7,7 +7,15 @@
     <title>Stretch App</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="header"></header>
+            <div class="pageContainer">
+                
+            </div>
+        <footer class="navigator">
+
+        </footer>
+    </div>
 
     <script src="main.js"></script>
 </body>
