--- a/Client/index.html
+++ b/Client/index.html
@@ -10,6 +10,7 @@
     <title>StretchSmart</title>
 </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
